# gitroutine.nvim

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
